<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ChangeThemeDialog"
    android:layout_margin="32dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        style="@style/GoogleText_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/theme_dialog_title"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/themeChoiceGroupRg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/themeChoiceDayRb"
            style="@style/RadioButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_day" />

        <RadioButton
            android:id="@+id/themeChoiceNightRb"
            style="@style/RadioButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark" />

        <RadioButton
            android:id="@+id/themeChoiceSystemRb"
            style="@style/RadioButtonDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/theme_system" />
    </RadioGroup>

    <TextView
        android:id="@+id/themeChoiceCancelBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/notosans_bold"
        android:text="@string/action_cancel"
        android:textColor="@color/lightSteelBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeChoiceGroupRg" />

</androidx.constraintlayout.widget.ConstraintLayout>